# VirtualJoystickCpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  ksp.html  msfs.html  vcpkg.json
.github/workflows/: windows.yml
css/: index.css  led.css  modal.css
js/: app.js  common.js  joystick.js  modal.js  packets.js
src/: main.cpp
src/controller/: controller.hpp  controller_packet_handler.cpp  controller_packet_handler.hpp  controller_session.hpp  packets.hpp  packets.txt
src/server/: AsyncFileReader.hpp  AsyncFileStreamer.hpp  create_websocket.cpp  create_websocket.hpp  get_mime_type.cpp  get_mime_type.hpp  packet_handler.hpp  run_server.cpp  run_server.hpp
static/: index.html  ksp.html  msfs.html
static/css/: app.css  index.css
static/js/: app.js  button.js  common.js  fullscreen.js  joystick.js  slider.js  surface.js  toggle_button.js
